--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <h4 class="header--sub-header">Excursion remember places you like, and recommends new points of interest around you.</h4>
   <p><img src="resources/images/camp.jpg"></p>
   <p><img src="resources/images/phone.png"></p>
-  <h4 class="header--sub-header">Comming soon for iphone and Android</h4>
+  <h4 class="header--secondar">Comming soon for iphone and Android</h4>
   <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+  <p class="footer-copyright">&copy;Excursion</p>
 
 </body>
 </html>
